--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,8 +55,8 @@
 
         <!-- Footer -->
         <footer>
-		        <div class="pagination">
-				        <!--<a href="#" class="previous">Prev</a>-->
+		        <!-- <div class="pagination">
+				        <a href="#" class="previous">Prev</a>
 				        <a href="#" class="page active">1</a>
 				        <a href="#" class="page">2</a>
 				        <a href="#" class="page">3</a>
@@ -65,7 +65,7 @@
 				        <a href="#" class="page">9</a>
 				        <a href="#" class="page">10</a>
 				        <a href="#" class="next">Next</a>
-		        </div>
+		        </div> -->
 
             <!-- This loops through the paginated posts -->
             <!-- {% for post in paginator.posts %}
@@ -91,8 +91,8 @@
                  {% else %}
                  <span class="next ">Next</span>
                  {% endif %}
-                 </div>
-               -->
+                 </div> -->
+              
         </footer>
 
 {% endif %}
