--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,16 @@
 		</div>
 
 		<!-- Footer -->
-		<footer id="footer" action="https://formspree.io/{{ site.email }}" method="POST">
+		<footer id="footer">
 				<section>
-						<form method="post" action="#">
+						<form action="https://formspree.io/{{ site.email }}" method="POST">
 								<div class="field">
 									  <label for="name">Name</label>
 									  <input type="text" name="name" id="name" />
 								</div>
 								<div class="field">
 									  <label for="email">Email</label>
-									  <input type="text" name="_replyto" id="email" />
+									  <input type="email" name="_replyto" id="email" />
 								</div>
 								<div class="field">
 									  <label for="message">Message</label>
